--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
-<h1>Unit Converter</h1>
-<label for="numberInput">Enter a value:</label>
-<input type="number" id="numberInput" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Unit Converter</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="calculator-container">
+      <h2>Distance Converter</h2>
+      
+      <input type="number" id="inputValue" placeholder="Enter value..." />
 
-<div>
-  <input type="radio" id="kmToMiles" name="conversion" value="kmToMiles" checked />
-  <label for="kmToMiles">Kilometers to Miles</label>
+      <div class="radio-buttons">
+        <label>
+          <input type="radio" name="conversion" value="milesToKm" checked />
+          Miles ➡️ Kilometers
+        </label>
+        <label>
+          <input type="radio" name="conversion" value="kmToMiles" />
+          Kilometers ➡️ Miles
+        </label>
+      </div>
 
-  <input type="radio" id="milesToKm" name="conversion" value="milesToKm" />
-  <label for="milesToKm">Miles to Kilometers</label>
-</div>
+      <button onclick="convert()">Convert</button>
 
-<button onclick="convert()">Convert</button>
-<div id="result"></div>
+      <div id="resultElement" class="result-display">Result will appear here</div>
+    </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
